recursion.lessons.recursion.spiral.Spiral.scala.error
Spiral:9: error: illegal start of simple expression
		else	
                ^